--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="Compilers, Verification, Weak Memory">
   <title>Yeji Han</title>
   <link rel="stylesheet" href="css/index.css">
-  <link rel="icon" type="image/x-icon" href="statics/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="statics/favicon.png">
 </head>
 
 <body>
@@ -70,6 +70,6 @@ I am currently working on Linux pKVM verification.
   </tr>
 </table>
 
-<footer><em>Last Updates: 26 Mar 2024.</em></footer>
+<footer><em>&copy Yeji Han. All Rights Reserved. Last Updates: 9 April 2024.</em></footer>
 </body>
 </html>
