--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Yeji Han">
   <meta name="description" content="Yeji Han's webpage">
-  <meta name="keywords" content="Compilers, Verification, Weak Memory">
+  <meta name="keywords" content="Compilers, Formal Verification, Weak Memory">
   <title>Yeji Han</title>
   <link rel="stylesheet" href="css/index.css">
-  <link rel="icon" type="image/x-icon" href="statics/favicon.png">
+  <link rel="icon" type="image/x-icon" href="assets/favicon.png">
 </head>
 
 <body>
@@ -17,11 +17,11 @@
 <header>
   <h1><span class="marker-highlight">Yeji Han</span></h1>
   <div class="flex-container">
-    <img src="statics/yeji.png" alt="Notion style avatar of me">
+    <img src="assets/yeji.png" alt="Notion style avatar of me">
     <nav>
     <ul>
       <li><a href="mailto:yeji.han@sf.snu.ac.kr">Email</a></li>
-      <!-- <li><a href="statics/cv.pdf">CV (pdf)</a></li> -->
+      <!-- <li><a href="assets/cv.pdf">CV (pdf)</a></li> -->
       <li><a href="https://github.com/yj-han">GitHub</a></li>
     </ul>
     </nav>
@@ -36,12 +36,12 @@ My research aims to make formal verification on concurrent programs.
 I am currently working on Linux pKVM verification.
 </p>
 
-<p><span class="low-highlight"><b>Interests</b></span>: 
-  Formal Verification, Operating Systems, Weak Memory
+<p><span class="circle-sketch-highlight"><b>Interests</b></span>: 
+  Compilers, Formal Verification, Weak Memory
 </p>
 
 <!-- Education -->
-<h2 id="Education"><span class="circle-sketch-highlight">Education</span></h2>
+<h2 id="Education"><span class="low-highlight">Education</span></h2>
 <table>
   <tr>
     <td>M.S., Computer Science and Engineering, Seoul National University</td>
@@ -58,7 +58,7 @@ I am currently working on Linux pKVM verification.
 </table>
 
 <!-- Employment -->
-<h2 id="Employment"><span class="circle-sketch-highlight">Employment</span></h2>
+<h2 id="Employment"><span class="low-highlight">Employment</span></h2>
 <table>
   <tr>
     <td>Research Intern, Institute of Computer Technology in Seoul National University</td>
@@ -70,6 +70,6 @@ I am currently working on Linux pKVM verification.
   </tr>
 </table>
 
-<footer><em>&copy Yeji Han. All Rights Reserved. Last Updates: 28 May 2024.</em></footer>
+<footer><em>&copy Yeji Han. All Rights Reserved. Last Updates: 6 June 2024.</em></footer>
 </body>
 </html>
