--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@ I am currently working on Linux pKVM verification.
 </p>
 
 <!-- Education -->
-<h2 id="Education"><span class="low-highlight">Education</span></h2>
+<h2 id="Education"><span class="marker-highlight">Education</span></h2>
 <table>
   <tr>
     <td>M.S., Computer Science and Engineering, Seoul National University</td>
-    <td>2024-Current</td>
+    <td>Current</td>
   </tr>
   <tr>
     <td>B.S., Computer Science, Korea Advanced Institute of Science and Technology (KAIST)</td>
@@ -58,7 +58,7 @@ I am currently working on Linux pKVM verification.
 </table>
 
 <!-- Employment -->
-<h2 id="Employment"><span class="low-highlight">Employment</span></h2>
+<h2 id="Employment"><span class="marker-highlight">Employment</span></h2>
 <table>
   <tr>
     <td>Research Intern, Institute of Computer Technology in Seoul National University</td>
@@ -70,6 +70,6 @@ I am currently working on Linux pKVM verification.
   </tr>
 </table>
 
-<footer><em>&copy Yeji Han. All Rights Reserved. Last Updates: 6 June 2024.</em></footer>
+<footer><em>&copy Yeji Han. All Rights Reserved. Last Updates: 12 June 2024.</em></footer>
 </body>
 </html>
