--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ I am currently working on Linux pKVM verification.
 <h2 id="Education"><span class="marker-highlight">Education</span></h2>
 <table>
   <tr>
-    <td>M.S., Computer Science and Engineering, Seoul National University</td>
+    <td>Ph.D., Computer Science and Engineering, Seoul National University</td>
     <td>Current</td>
   </tr>
   <tr>
@@ -57,9 +57,13 @@ I am currently working on Linux pKVM verification.
   </tr>
 </table>
 
-<!-- Employment -->
-<h2 id="Employment"><span class="marker-highlight">Employment</span></h2>
+<!-- Experience -->
+<h2 id="Experience"><span class="marker-highlight">Experience</span></h2>
 <table>
+  <tr>
+    <td>Visiting Research Student, University of Cambridge</td>
+    <td>2024</td>
+  </tr>
   <tr>
     <td>Research Intern, Institute of Computer Technology in Seoul National University</td>
     <td>2023</td>
@@ -70,6 +74,6 @@ I am currently working on Linux pKVM verification.
   </tr>
 </table>
 
-<footer><em>&copy Yeji Han. All Rights Reserved. Last Updates: 12 June 2024.</em></footer>
+<footer><em>&copy Yeji Han. All Rights Reserved. Last Updates: 10 July 2024.</em></footer>
 </body>
 </html>
