--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ I am currently working on Linux pKVM verification.
   </tr>
 </table>
 
-<!-- Experience -->
-<h2 id="Experience"><span class="marker-highlight">Experience</span></h2>
+<!-- Experiences -->
+<h2 id="Experiences"><span class="marker-highlight">Experiences</span></h2>
 <table>
   <tr>
     <td>Visiting Research Student, University of Cambridge</td>
@@ -74,6 +74,6 @@ I am currently working on Linux pKVM verification.
   </tr>
 </table>
 
-<footer><em>&copy Yeji Han. All Rights Reserved. Last Updates: 10 July 2024.</em></footer>
+<footer><em>&copy Yeji Han. All Rights Reserved. Last Updates: 16 July 2024.</em></footer>
 </body>
 </html>
