--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Yeji Han">
   <meta name="description" content="Yeji Han's webpage">
-  <meta name="keywords" content="Compilers, Formal Verification, Weak Memory">
+  <meta name="keywords" content="Memory Model, Compilers, Formal Verification">
   <title>Yeji Han</title>
   <link rel="stylesheet" href="css/index.css">
   <link rel="icon" type="image/x-icon" href="assets/favicon.png">
@@ -36,8 +36,8 @@ My research aims to make formal verification on concurrent programs.
 I am currently working on Linux pKVM verification.
 </p>
 
-<p><span class="circle-sketch-highlight"><b>Interests</b></span>: 
-  Compilers, Formal Verification, Weak Memory
+<p><span class="low-highlight"><b>Interests</b></span>: 
+  Memory Model, Compilers, Formal Verification
 </p>
 
 <!-- Education -->
@@ -74,6 +74,6 @@ I am currently working on Linux pKVM verification.
   </tr>
 </table>
 
-<footer><em>&copy Yeji Han. All Rights Reserved. Last Updates: 16 July 2024.</em></footer>
+<footer><em>&copy Yeji Han. All Rights Reserved. Last Updates: 23 July 2024.</em></footer>
 </body>
 </html>
