--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <ul>
       <li><a href="mailto:yeji.han@sf.snu.ac.kr">Email</a></li>
       <!-- <li><a href="assets/cv.pdf">CV (pdf)</a></li> -->
-      <li><a href="https://github.com/yj-han">GitHub</a></li>
+      <li><a href="https://github.com/haan6">GitHub</a></li>
     </ul>
     </nav>
   </div>
@@ -74,6 +74,6 @@ I am currently working on Linux pKVM verification.
   </tr>
 </table>
 
-<footer><em>&copy Yeji Han. All Rights Reserved. Last Updates: 23 July 2024.</em></footer>
+<footer><em>&copy Yeji Han. All Rights Reserved. Last Updates: 7 Aug 2024.</em></footer>
 </body>
 </html>
