Add a reading list

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <li><a href="mailto:yeji.han@sf.snu.ac.kr">Email</a></li>
       <!-- <li><a href="assets/cv.pdf">CV (pdf)</a></li> -->
       <li><a href="https://github.com/haan6">GitHub</a></li>
+      <li><a href="reading.html">Reading List</a></li>
     </ul>
     </nav>
   </div>
